# LEDMatrix

./: .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  bandit.yaml  first_time_install.sh  pyproject.toml  start_display.sh  stop_display.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: arch-validator-agent.md  ba-agent.md  green-agent.md  migration-agent.md  pm-agent.md  red-agent.md
.claude/rules/: architecture.md  commits.md  migration.md  plugin-dev.md  roadmap.md  tdd.md  testing.md
.cursor/rules/: raspberry-pi-development.mdc
.github/workflows/: audit.yml  lint.yml  tests.yml  typecheck.yml
config/: config_secrets.template.json
docs/: DEVELOPER_QUICK_REFERENCE.md  DEVELOPMENT.md  EMULATOR_SETUP_GUIDE.md  HOW_TO_RUN_TESTS.md  MATRIX_CLI.md  PLUGIN_DEPENDENCY_GUIDE.md  PLUGIN_DEPENDENCY_TROUBLESHOOTING.md  SSH_UNAVAILABLE_AFTER_INSTALL.md  TROUBLESHOOTING.md
docs/archive/: V3_INTERFACE_README.md
docs/plans/: 2026-03-01-matrix-cli-docs-design.md  2026-03-01-matrix-cli-docs.md  2026-03-02-transit-board-validation-search-design.md  2026-03-02-transit-board-validation-search.md
plugin-repos/: transit-board
plugin-repos/march-madness/: manager.py  manifest.json
plugin-repos/starlark-apps/: manager.py  manifest.json
plugin-repos/web-ui-info/: manager.py  manifest.json
scripts/: diagnose_dependencies.sh  diagnose_web_interface.sh  diagnose_web_ui.sh  install_dependencies_apt.py  install_plugin_dependencies.sh  matrix_cli.py  verify_installation.sh
scripts/dev/: run_emulator.sh
scripts/git-hooks/: pre-push-plugin-version
scripts/install/: README.md  configure_web_sudo.sh  debug_install.sh  install_service.sh  install_web_service.sh  one-shot-install.sh  uninstall.sh
scripts/utils/: start_web_conditionally.py
sprints/v1.1.0/: FOUND-001-pyproject-uv-migration.md  FOUND-002-venv-bootstrap.md  FOUND-003-matrix-cli-install-doctor.md  FOUND-004-ci-pipeline.md  FOUND-005-precommit-ruff.md  FOUND-006-plugin-quickfixes.md  README.md  SPIKE-001-update-diagnostic-scripts.md  SPIKE-002-update-docs-for-uv-migration.md  SPIKE-003-monorepo-plugin-quickfixes-pr.md  SPIKE-003-plugin-deps-venv-migration.md  SPIKE-004-remove-deprecated-legacy-scripts.md  SPIKE-005-doctor-rgbmatrix-import-check.md  SPIKE-006-retire-first-time-install-script.md  SPIKE-006-ruff-lint-cleanup.md  SPIKE-007-bandit-config.md  SPIKE-008-plugin-deps-venv-migration.md  SPIKE-009-retire-first-time-install-script.md  SPIKE-010-expand-matrix-install-pi-setup.md  SPIKE-010-install-hardware-flag.md  SPIKE-011-install-hardware-flag.md  SPIKE-012-matrix-install-full-oneshot.md  SPIKE-013-matrix-cli-replace-diagnostic-scripts.md  SPIKE-014-matrix-cli-replace-fix-perms-scripts.md  SPIKE-015-matrix-cli-replace-network-scripts.md  SPIKE-016-matrix-doctor-full-validation.md  SPIKE-017-matrix-uninstall-subcommand.md  SPIKE-018-archive-obsolete-scripts.md  SPIKE-019-plugin-pyproject-toml-migration.md  SPIKE-019-plugin-pyproject-toml.md
src/: __init__.py  background_cache_mixin.py  background_data_service.py  base_odds_manager.py  cache_manager.py  config_manager.py  config_manager_atomic.py  config_service.py  display_controller.py  display_manager.py  dynamic_team_resolver.py  error_aggregator.py  exceptions.py  font_manager.py  font_test_manager.py  generic_cache_mixin.py  image_utils.py  layout_manager.py  logging_config.py  logo_downloader.py  startup_validator.py  wifi_manager.py
src/base_classes/: api_extractors.py  baseball.py  basketball.py  data_sources.py  football.py  hockey.py  sports.py
src/cache/: __init__.py  cache_metrics.py  cache_strategy.py  disk_cache.py  memory_cache.py
src/common/: __init__.py  api_helper.py  basketball_plugin_example.py  cli.py  config_helper.py  display_helper.py  error_handler.py  game_helper.py  logo_helper.py  permission_utils.py  scroll_helper.py  text_helper.py  utils.py
src/plugin_system/: __init__.py  base_plugin.py  dep_installer.py  health_monitor.py  operation_history.py  operation_queue.py  operation_types.py  plugin_executor.py  plugin_health.py  plugin_loader.py  plugin_manager.py  plugin_state.py  resource_monitor.py  (+5 more)
systemd/: ledmatrix-web.service  ledmatrix.service
test/: conftest.py  test_first_time_install_deprecation.py  test_matrix_cli.py  test_matrix_cli_install_pi.py  test_plugin_deps.py  test_plugin_deps_uv.py  test_web_form_parsing.py
web_interface/: README.md  run.sh
(+20 files in other folders)
